compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__list_with_tail_used_in_guard.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn go(x: List(Int), y: List(Int)) {\n  case x {\n    [1, ..x] if [1, 2, ..x] == y -> True\n    _ -> False\n  }\n}"
---
----- SOURCE CODE

pub fn go(x: List(Int), y: List(Int)) {
  case x {
    [1, ..x] if [1, 2, ..x] == y -> True
    _ -> False
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/2]).

-spec go(list(integer()), list(integer())) -> boolean().
go(X, Y) ->
    case X of
        [1 | X@1] when [1, 2 | X@1] =:= Y ->
            true;

        _ ->
            false
    end.
