compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__multiple_alternative_branches_with_same_variable_names.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn go(x) {\n  case x {\n    1 as x | x -> {\n      let a = 1 + x\n      Nil\n    }\n    3 as x | x -> {\n      let a = 2 + x\n      Nil\n    }\n  }\n\n  let a = 3\n  a + 1\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    1 as x | x -> {
      let a = 1 + x
      Nil
    }
    3 as x | x -> {
      let a = 2 + x
      Nil
    }
  }

  let a = 3
  a + 1
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(integer()) -> integer().
go(X) ->
    case X of
        1 = X@1 ->
            A = 1 + X@1,
            nil;

        X@1 ->
            A = 1 + X@1,
            nil;

        3 = X@2 ->
            A@1 = 2 + X@2,
            nil;

        X@2 ->
            A@1 = 2 + X@2,
            nil
    end,
    A@2 = 3,
    A@2 + 1.
