compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__case__negative_zero_pattern.snap
---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main(x) {\n  case x {\n    -0.0 -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    -0.0 -> 1
    _ -> 2
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(float()) -> integer().
main(X) ->
    case X of
        -0.0 ->
            1;

        _ ->
            2
    end.
